2009-05-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

        * Mono.Merge/FixReflectionAfterMerge.cs: Fix for real (fix the last fix).

2009-05-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

        * Mono.Merge/FixReflectionAfterMerge.cs: Fix build with cecil trunk.

2009-05-28  Andrés G. Aragoneses <aaragoneses@novell.com>

	* Makefile:
		Fix make clean.

2009-05-27  Andrés G. Aragoneses <aaragoneses@novell.com>

	* Makefile:
		Fix build.

2009-05-27  Andrés G. Aragoneses <aaragoneses@novell.com>

	* Mono.Merge/Driver.cs:
		Fix parsing when one of the assemblies is
		an absolute path.

2006-11-30  Jb Evain  <jbevain@gmail.com>

	* Mono.Merge/ReflectionMerger.cs:
		Fix a bug in merging nested nested types.

2006-11-06  Jb Evain  <jbevain@gmail.com>

	* Makefile, monomerge.exe.sources:
		Compilation stuff for Mono.

	* First check-in of the merging tool by:
		Alex Prudiky  <prudkiy@gmail.com>